moved to a different package and some minor refactoring